--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -5,12 +5,13 @@ $mainColor: #12B4E9;
 $backgroundColor: black;
 $textColor: white;
 $titleFont: 'againtsregular', 'Permanent Marker', sans-serif;
-$bodyFont: 'Montserrat', sans-serif;
+$bodyFont: 'Montserrat', sans-serif; // Don't forget to import if you want to change!
 
+/* -----  -----*/
 @font-face {
 	font-family: 'againtsregular';
 	src: url(../assets/againts.ttf);
-}
+} // Make sure you add the .ttf file to public/assets
 
 /* ----- GLOBAL STYLES -----*/
 body {
@@ -59,10 +60,11 @@ h1 .hashtag {
 	margin: 0;
 	display: flex;
 	flex-wrap: wrap;
-	margin: 20px;
+	// margin: 20px;
 }
 .dayItem {
-	width: 16.6%;
+	width: 15.6%;
+	margin: 0.5%;
 }
 .dayLink {
 	text-decoration: none;
@@ -83,7 +85,7 @@ h1 .hashtag {
 	text-align: right;
 	font-size: 80px;
 	margin: 0;
-	opacity: 0.3;
+	opacity: 0.25;
 	position: absolute;
 	top: 50%;
 	left: 20px;
@@ -95,6 +97,13 @@ h1 .hashtag {
 	font-size: 1.2rem;
 	position: relative;
 	bottom: 10px;
+	text-align: center;
+	text-shadow: 2px 2px 0 black;
 }
+// Box coloring
+.dayItem {
+	background-image: linear-gradient(150deg, transparent 50%, rgba(255,255,255,0.1));
+}
+
 
 /* ----- FOOTER STYLES -----*/
