--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -7,7 +7,7 @@ $textColor: white;
 $titleFont: 'againtsregular', 'Permanent Marker', sans-serif;
 $bodyFont: 'Montserrat', sans-serif; // Don't forget to import if you want to change!
 
-/* -----  -----*/
+/* ----- Import that JS30 brand font -----*/
 @font-face {
 	font-family: 'againtsregular';
 	src: url(../assets/againts.ttf);
@@ -15,12 +15,20 @@ $bodyFont: 'Montserrat', sans-serif; // Don't forget to import if you want to ch
 
 /* ----- GLOBAL STYLES -----*/
 body {
-	background-color: $backgroundColor;
+	//background-color: $backgroundColor;
 	min-height: 100vh;
 	font-size: 62.5%;
 }
 
 /* ----- HEADER STYLES -----*/
+.carousel-cell {
+	min-width: 100vw;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
 h1, .subtitle {
 	text-align: center;
 	margin: 0;
@@ -29,17 +37,17 @@ h1, .subtitle {
 }
 h1 {
 	font-weight: normal;
-	font-size: 6rem;
+	font-size: 8rem;
 }
 h1 span {
 	color: $mainColor;
-	font-size: 7.5rem;
+	font-size: 10rem;
 }
 h1 .thirty {
 	margin-left: 10px;
 }
 h1 .hashtag {
-	font-size: 4rem;
+	font-size: 6rem;
 }
 .subtitle {
 	font-size: 2.5rem;
@@ -51,4 +59,28 @@ h1 .hashtag {
 }
 .subtitle a:hover {
 	color: $textColor;
+}
+
+/* ----- FLICKITY STYLES -----*/
+.flickity-page-dots {
+	position: absolute;
+	top: 95%;
+	left: 50%;
+	bottom: auto;
+	right: auto;
+	transform: translateX(-50%);
+}
+.flickity-page-dots .dot {
+	opacity: 1;
+	background: white;
+}
+.flickity-page-dots .dot.is-selected {
+	background: white;
+}
+
+/* ----- IFRAME STYLES -----*/
+.pageContent {
+	width: 100vw;
+	height: 100vh;
+	// border: 3px solid $mainColor;
 }
