--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -62,6 +62,9 @@ h1 .hashtag {
 }
 
 /* ----- FLICKITY STYLES -----*/
+.main-carousel {
+	overflow: hidden;
+}
 .flickity-page-dots {
 	position: absolute;
 	top: 95%;
@@ -82,5 +85,6 @@ h1 .hashtag {
 .pageContent {
 	width: 100vw;
 	height: 100vh;
+	overflow: scroll;
 	// border: 3px solid $mainColor;
 }
