--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -21,14 +21,6 @@ body {
 }
 
 /* ----- HEADER STYLES -----*/
-.carousel-cell {
-	min-width: 100vw;
-	min-height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
 h1, .subtitle {
 	text-align: center;
 	margin: 0;
@@ -41,10 +33,10 @@ h1 {
 }
 h1 span {
 	color: $mainColor;
-	font-size: 10rem;
 }
 h1 .thirty {
 	margin-left: 10px;
+	font-size: 10rem;
 }
 h1 .hashtag {
 	font-size: 6rem;
@@ -61,9 +53,46 @@ h1 .hashtag {
 	color: $textColor;
 }
 
+/* ----- LANDING PAGE MEDIA QUERIES -----*/
+@media (max-width: 768px) {
+	h1 {
+		font-size: 80px;
+	}
+	h1 .thirty {
+		margin-left: 10px;
+		font-size: 100px;
+	}
+	h1 .hashtag {
+		font-size: 60px;
+	}
+}
+@media (max-width: 500px) {
+	h1 {
+		font-size: 55px;
+	}
+	h1 .thirty {
+		margin-left: 10px;
+		font-size: 75px;
+	}
+	h1 .hashtag {
+		font-size: 35px;
+	}
+	.subtitle {
+		font-size: 30px;
+	}
+}
+
 /* ----- FLICKITY STYLES -----*/
 .main-carousel {
 	overflow: hidden;
+}
+.carousel-cell {
+	min-width: 100vw;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 .flickity-page-dots {
 	position: absolute;
@@ -74,7 +103,7 @@ h1 .hashtag {
 	transform: translateX(-50%);
 }
 .flickity-page-dots .dot {
-	opacity: 1;
+	opacity: 0.2;
 	background: white;
 }
 .flickity-page-dots .dot.is-selected {
